# sopel-notify

./: .gitignore  setup.cfg
sopel_notify/: __init__.py  config.py  defaults.py  users.json
