[metadata]
name = sopel-notify
version = 0.1.0
summary = A Sopel plugin that notifies users on join/connect
author = Zeeshan
license = EFL-2.0
url = https://github.com/zeeshanjan/sopel-notify
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = false
include_package_data = true
install_requires =
    sopel

[options.entry_points]
sopel.plugins =
    notify_watch = sopel_notify
